--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rodrigues Matis - Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
 </head>
 <body>
@@ -12,16 +12,19 @@
     <!-- HEADER / NAVBAR -->
     <header class="header">
         <div class="container header-content">
+
             <!-- Gauche : logo + bouton CV -->
             <div class="header-left">
                 <div class="logo">
                     <span class="logo-mark">RM</span>
                     <span class="logo-text">Rodrigues&nbsp;Matis</span>
                 </div>
-                <a 
-                    href="CV-matis-rodrigues.pdf" 
-                    target="_blank" 
-                    rel="noopener noreferrer" 
+
+                <!-- Bouton Mon CV -->
+                <a
+                    href="CV-matis-rodrigues.pdf"
+                    target="_blank"
+                    rel="noopener noreferrer"
                     class="cv-link-header"
                 >
                     Mon CV
@@ -65,9 +68,8 @@
             </div>
 
             <div class="hero-card">
-                <!-- Ta photo (fichier matis.jpg à la racine du dépôt) -->
                 <div class="hero-photo">
-                    <img src="matis.jpg" alt="Photo de Rodrigues Matis">
+                    <img src="matis.jpg" alt="Photo de Rodrigues Matis" />
                 </div>
                 <div class="hero-info">
                     <p><strong>Ville :</strong> Cergy (FR)</p>
@@ -134,11 +136,10 @@
                         <li>Approche scientifique du sport</li>
                     </ul>
 
-                    <!-- Lien vers le site ILEPS -->
-                    <a 
-                        href="https://www.ileps.fr" 
-                        target="_blank" 
-                        rel="noopener noreferrer" 
+                    <a
+                        href="https://www.ileps.fr"
+                        target="_blank"
+                        rel="noopener noreferrer"
                         class="btn btn-primary btn-sm"
                     >
                         Découvrir l’ILEPS
@@ -146,9 +147,8 @@
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Photo de l’ILEPS (fichier ileps.jpg à la racine) -->
                     <div class="image-wrapper">
-                        <img src="ileps.jpg" alt="Bâtiment de l’ILEPS à Cergy">
+                        <img src="ileps.jpg" alt="Bâtiment de l’ILEPS à Cergy" />
                     </div>
                 </div>
             </div>
@@ -167,9 +167,7 @@
             <div class="grid-2">
                 <div class="card">
                     <h3>Les Bains de Seine Mauldre</h3>
-                    <p>
-                        Missions réalisées :
-                    </p>
+                    <p>Missions réalisées :</p>
                     <ul class="list">
                         <li>Accueil des clients et accompagnement</li>
                         <li>Gestion des réservations et encaissements</li>
@@ -177,10 +175,9 @@
                         <li>Participation à l’organisation d’événements</li>
                         <li>Communication et image de la structure</li>
                     </ul>
-                    <!-- Bouton vers le site -->
-                    <a 
-                        href="https://www.ucpa.com/aqua-stadium/aubergenville?utm_campaign=PMAX%20-%20HM%20-%20Sport%20Trotter%20-%20Aventures%20-%20Fil%20Rouge%20-%20Conv%20-%20Annuel%20-%20Desti&utm_source=google&utm_medium=cpc&utm_content=marquage_manuel&utm_source_platform=Google+Ads&utm_id=22395365712&gad_source=1&gad_campaignid=22401840215&gbraid=0AAAAADqFyYljfxVfTTf0zivJ7KiK_W4ix&gclid=Cj0KCQiA6NTJBhDEARIsAB7QHD34zbwAnDWoO456hWv_hp7Toy7Y0uGkzeWFhxnNlgwwaITdN6fYzCEaAs32EALw_wcB" 
-                        target="_blank" 
+                    <a
+                        href="https://www.ucpa.com/aqua-stadium/aubergenville?utm_campaign=PMAX%20-%20HM%20-%20Sport%20Trotter%20-%20Aventures%20-%20Fil%20Rouge%20-%20Conv%20-%20Annuel%20-%20Desti&utm_source=google&utm_medium=cpc&utm_content=marquage_manuel&utm_source_platform=Google+Ads&utm_id=22395365712&gad_source=1&gad_campaignid=22401840215&gbraid=0AAAAADqFyYljfxVfTTf0zivJ7KiK_W4ix&gclid=Cj0KCQiA6NTJBhDEARIsAB7QHD34zbwAnDWoO456hWv_hp7Toy7Y0uGkzeWFhxnNlgwwaITdN6fYzCEaAs32EALw_wcB"
+                        target="_blank"
                         rel="noopener noreferrer"
                         class="btn btn-outline btn-sm"
                     >
@@ -189,9 +186,8 @@
                 </div>
 
                 <div class="card card-photo">
-                    <!-- Photo des Bains (fichier les-bains.jpg à la racine) -->
                     <div class="image-wrapper">
-                        <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
+                        <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre" />
                     </div>
                 </div>
             </div>
@@ -216,7 +212,7 @@
                         </li>
                         <li>
                             <span class="contact-label">LinkedIn :</span>
-                            <a 
+                            <a
                                 href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
                                 target="_blank"
                                 rel="noopener noreferrer"
@@ -247,7 +243,7 @@
                 Contact :
                 <a href="mailto:matis.rodrigues@ileps.fr">matis.rodrigues@ileps.fr</a>
                 •
-                <a 
+                <a
                     href="https://www.linkedin.com/in/matis-rodrigues-46b703295/"
                     target="_blank"
                     rel="noopener noreferrer"
