Refactor styles and add segmented navigation

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            background: radial-gradient(circle at top, #0f172a 0%, #020617 45%, #000000 100%);
+            background: radial-gradient(circle at top, #020617 0%, #020617 35%, #020617 60%, #000000 100%);
             color: #e5e7eb;
             min-height: 100vh;
         }
@@ -37,7 +37,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 16px;
-            margin-bottom: 32px;
+            margin-bottom: 18px;
         }
 
         .identity {
@@ -50,15 +50,15 @@
             width: 64px;
             height: 64px;
             border-radius: 999px;
-            border: 2px solid rgba(59, 130, 246, 0.6);
-            background: linear-gradient(135deg, #1d4ed8, #0ea5e9);
+            border: 2px solid rgba(96, 165, 250, 0.9);
+            background: radial-gradient(circle at top left, #38bdf8, #1d4ed8);
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 700;
             font-size: 24px;
             color: #e5e7eb;
-            box-shadow: 0 0 25px rgba(59, 130, 246, 0.4);
+            box-shadow: 0 0 26px rgba(59, 130, 246, 0.7);
         }
 
         .name-block h1 {
@@ -81,7 +81,7 @@
         .cv-button {
             padding: 10px 18px;
             border-radius: 999px;
-            background: #1d4ed8;
+            background: linear-gradient(135deg, #1d4ed8, #2563eb);
             border: 1px solid #60a5fa;
             font-size: 14px;
             font-weight: 600;
@@ -89,7 +89,7 @@
             display: inline-flex;
             align-items: center;
             gap: 6px;
-            box-shadow: 0 0 18px rgba(37, 99, 235, 0.6);
+            box-shadow: 0 0 18px rgba(37, 99, 235, 0.7);
             cursor: pointer;
             transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
         }
@@ -107,16 +107,58 @@
 
         .cv-button:hover {
             transform: translateY(-1px) scale(1.02);
-            background: #2563eb;
+            background: linear-gradient(135deg, #2563eb, #1d4ed8);
             box-shadow: 0 0 24px rgba(37, 99, 235, 0.9);
         }
 
-        /* --- NAV --- */
+        /* --- BARRE STYLE DISNEY+ --- */
+        .top-segmented {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 18px;
+        }
+
+        .segmented-group {
+            display: inline-flex;
+            border-radius: 999px;
+            border: 1px solid rgba(129, 140, 248, 0.9);
+            background: radial-gradient(circle at top, #111827 0%, #020617 55%, #000000 100%);
+            box-shadow: 0 0 25px rgba(30, 64, 175, 0.7);
+            overflow: hidden;
+        }
+
+        .segmented-item {
+            padding: 8px 22px;
+            font-size: 13px;
+            border: none;
+            background: transparent;
+            color: #e5e7eb;
+            cursor: pointer;
+            white-space: nowrap;
+            transition: background 0.15s ease, color 0.15s ease, transform 0.1s ease;
+        }
+
+        .segmented-item:first-child {
+            border-radius: 999px 0 0 999px;
+        }
+
+        .segmented-item:last-child {
+            border-radius: 0 999px 999px 0;
+        }
+
+        .segmented-item.active {
+            background: linear-gradient(135deg, #60a5fa, #a855f7);
+            color: #0b1120;
+            font-weight: 600;
+            transform: translateY(-1px);
+        }
+
+        /* --- NAV CLASSIQUE --- */
         nav {
             display: flex;
             flex-wrap: wrap;
             gap: 8px;
-            margin-bottom: 28px;
+            margin-bottom: 24px;
         }
 
         .nav-pill {
@@ -126,19 +168,19 @@
             font-size: 13px;
             color: #cbd5f5;
             cursor: pointer;
-            background: rgba(15, 23, 42, 0.7);
+            background: rgba(15, 23, 42, 0.75);
             backdrop-filter: blur(10px);
             transition: background 0.15s ease, transform 0.15s ease, border-color 0.15s ease;
         }
 
         .nav-pill:hover {
-            background: rgba(37, 99, 235, 0.2);
-            border-color: rgba(59, 130, 246, 0.9);
+            background: rgba(37, 99, 235, 0.23);
+            border-color: rgba(59, 130, 246, 0.95);
             transform: translateY(-1px);
         }
 
         .nav-pill.primary {
-            background: rgba(37, 99, 235, 0.23);
+            background: rgba(37, 99, 235, 0.28);
             border-color: rgba(59, 130, 246, 1);
         }
 
@@ -160,15 +202,18 @@
             .cv-wrapper {
                 align-self: flex-start;
             }
+            .top-segmented {
+                justify-content: flex-start;
+            }
         }
 
         /* --- CARDS --- */
         .card {
-            background: radial-gradient(circle at top left, rgba(37, 99, 235, 0.22), rgba(15, 23, 42, 0.97));
+            background: radial-gradient(circle at top left, rgba(37, 99, 235, 0.18), rgba(15, 23, 42, 0.96));
             border-radius: 18px;
             padding: 18px 16px;
-            border: 1px solid rgba(148, 163, 184, 0.5);
-            box-shadow: 0 0 25px rgba(15, 23, 42, 0.9);
+            border: 1px solid rgba(148, 163, 184, 0.55);
+            box-shadow: 0 0 26px rgba(15, 23, 42, 0.95);
             margin-bottom: 16px;
         }
 
@@ -195,10 +240,11 @@
             gap: 6px;
             padding: 4px 10px;
             border-radius: 999px;
-            border: 1px solid rgba(148, 163, 184, 0.6);
+            border: 1px solid rgba(148, 163, 184, 0.7);
             font-size: 11px;
             margin-right: 6px;
             margin-top: 6px;
+            background: rgba(15, 23, 42, 0.9);
         }
 
         .tag-dot {
@@ -229,7 +275,7 @@
             padding: 6px 12px;
             border-radius: 999px;
             border: 1px solid rgba(148, 163, 184, 0.7);
-            background: rgba(15, 23, 42, 0.85);
+            background: rgba(15, 23, 42, 0.9);
             display: inline-flex;
             align-items: center;
             gap: 6px;
@@ -237,7 +283,7 @@
 
         .contact-pill span {
             font-size: 12px;
-            opacity: 0.7;
+            opacity: 0.8;
         }
 
         footer {
@@ -262,15 +308,24 @@
         </div>
 
         <div class="cv-wrapper">
-            <!-- BOUTON CV QUI OUVRE CVPerso.pdf -->
-            <a href="CVPerso.pdf" target="_blank" class="cv-button">
+            <!-- BOUTON CV → PAGE cv.html -->
+            <a href="cv.html" class="cv-button">
                 <span class="icon">⇩</span>
                 <span>Mon CV</span>
             </a>
         </div>
     </header>
 
-    <!-- NAV -->
+    <!-- BARRE STYLE DISNEY+ -->
+    <div class="top-segmented">
+        <div class="segmented-group">
+            <button class="segmented-item active" data-target="section-profil">Pour vous</button>
+            <button class="segmented-item" data-target="section-etudes">Parcours</button>
+            <button class="segmented-item" data-target="section-contact">Contact</button>
+        </div>
+    </div>
+
+    <!-- NAV CLASSIQUE -->
     <nav>
         <button class="nav-pill primary" data-target="section-profil">Qui suis-je ?</button>
         <button class="nav-pill" data-target="section-etudes">Études</button>
@@ -354,8 +409,8 @@
                 <p>Ouvert aux opportunités en marketing, communication et événementiel.</p>
 
                 <div class="contact-row">
-                    <a href="mailto:adresse@mail.com" class="contact-pill">
-                        <span>✉️</span> adresse@mail.com
+                    <a href="mailto:matis.rodrigues@ileps.fr" class="contact-pill">
+                        <span>✉️</span> matis.rodrigues@ileps.fr
                     </a>
                     <a href="https://www.linkedin.com/in/matis-rodrigues-46b703295/" target="_blank" class="contact-pill">
                         <span>in</span> LinkedIn
@@ -373,12 +428,30 @@
 </div>
 
 <script>
-    // Année automatique dans le footer
+    // Année auto
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // Scroll doux sur les boutons de navigation
+    // Scroll doux pour les nav pills
     document.querySelectorAll('.nav-pill').forEach(btn => {
         btn.addEventListener('click', () => {
+            const targetId = btn.getAttribute('data-target');
+            const section = document.getElementById(targetId);
+            if (section) {
+                window.scrollTo({
+                    top: section.offsetTop - 20,
+                    behavior: 'smooth'
+                });
+            }
+        });
+    });
+
+    // Barre style Disney+ : scroll + état actif
+    document.querySelectorAll('.segmented-item').forEach(btn => {
+        btn.addEventListener('click', () => {
+            // Active / désactive visuel
+            document.querySelectorAll('.segmented-item').forEach(b => b.classList.remove('active'));
+            btn.classList.add('active');
+
             const targetId = btn.getAttribute('data-target');
             const section = document.getElementById(targetId);
             if (section) {
