--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
 
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            background: radial-gradient(circle at top, #020617 0%, #020617 40%, #000000 100%);
-            color: #e5e7eb;
+            background: #f5f7ff; /* fond blanc très léger */
+            color: #111827;
             min-height: 100vh;
         }
 
         a {
             text-decoration: none;
-            color: inherit;
+            color: #1d4ed8;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
 
         /* LAYOUT GLOBAL */
         .page {
             max-width: 1100px;
             margin: 0 auto;
-            padding: 24px 16px 48px;
+            padding: 20px 16px 32px;
         }
 
         /* HEADER */
@@ -37,7 +41,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 16px;
-            margin-bottom: 24px;
+            margin-bottom: 16px;
         }
 
         .identity-block {
@@ -51,8 +55,8 @@
             height: 70px;
             border-radius: 999px;
             overflow: hidden;
-            border: 2px solid rgba(96, 165, 250, 0.9);
-            box-shadow: 0 0 25px rgba(59, 130, 246, 0.8);
+            border: 2px solid rgba(59, 130, 246, 0.7);
+            box-shadow: 0 8px 18px rgba(15, 23, 42, 0.15);
         }
 
         .avatar-photo img {
@@ -68,72 +72,73 @@
 
         .name-title p {
             font-size: 14px;
-            color: #9ca3af;
+            color: #4b5563;
         }
 
         /* NAV EN HAUT */
         nav {
             display: flex;
-            gap: 10px;
+            gap: 8px;
             flex-wrap: wrap;
         }
 
         nav a {
             padding: 6px 14px;
             border-radius: 999px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
+            border: 1px solid #e5e7eb;
             font-size: 13px;
-            color: #dbeafe;
-            background: rgba(15, 23, 42, 0.9);
-            backdrop-filter: blur(10px);
+            color: #111827;
+            background: #ffffff;
             cursor: pointer;
-            transition: background 0.15s ease, transform 0.15s ease, border-color 0.15s ease;
+            transition: background 0.15s ease, transform 0.15s ease, box-shadow 0.15s ease;
+            box-shadow: 0 4px 10px rgba(15, 23, 42, 0.04);
+            text-decoration: none;
         }
 
         nav a:hover {
-            background: rgba(37, 99, 235, 0.25);
-            border-color: rgba(59, 130, 246, 1);
+            background: #e0ebff;
             transform: translateY(-1px);
+            box-shadow: 0 6px 14px rgba(15, 23, 42, 0.08);
         }
 
         /* HERO AVEC IMAGE */
         .hero {
             display: grid;
             grid-template-columns: 1.5fr 1fr;
-            gap: 20px;
-            margin-bottom: 26px;
+            gap: 14px;
+            margin-bottom: 18px; /* moins d’espace */
             align-items: center;
         }
 
         .hero-text {
-            background: radial-gradient(circle at top left, rgba(37, 99, 235, 0.22), rgba(15, 23, 42, 0.98));
-            border-radius: 18px;
-            padding: 18px 18px 20px;
-            border: 1px solid rgba(148, 163, 184, 0.6);
-            box-shadow: 0 0 26px rgba(15, 23, 42, 0.95);
+            background: #ffffff;
+            border-radius: 16px;
+            padding: 14px 14px 16px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 10px 22px rgba(15, 23, 42, 0.06);
         }
 
         .hero-text h2 {
             font-size: 20px;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
         }
 
         .hero-text p {
             font-size: 14px;
-            color: #e5e7eb;
+            color: #374151;
         }
 
         .hero-photo {
-            background: radial-gradient(circle at top, rgba(15, 23, 42, 0.7), rgba(15, 23, 42, 0.95));
-            border-radius: 20px;
-            padding: 8px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
-            box-shadow: 0 0 28px rgba(15, 23, 42, 0.9);
+            background: #ffffff;
+            border-radius: 16px;
+            padding: 6px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 10px 22px rgba(15, 23, 42, 0.06);
         }
 
         .hero-photo img {
             width: 100%;
-            border-radius: 16px;
+            border-radius: 12px;
             object-fit: cover;
         }
 
@@ -141,33 +146,33 @@
         .grid-two {
             display: grid;
             grid-template-columns: 1.6fr 1.2fr;
-            gap: 18px;
-            margin-bottom: 20px;
+            gap: 14px;
+            margin-bottom: 14px; /* moins de trou */
         }
 
         .card {
-            background: radial-gradient(circle at top left, rgba(30, 64, 175, 0.22), rgba(15, 23, 42, 0.97));
-            border-radius: 18px;
-            padding: 18px 16px;
-            border: 1px solid rgba(148, 163, 184, 0.55);
-            box-shadow: 0 0 24px rgba(15, 23, 42, 0.95);
+            background: #ffffff;
+            border-radius: 16px;
+            padding: 14px 14px 16px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 10px 22px rgba(15, 23, 42, 0.05);
         }
 
         .card h2 {
             font-size: 18px;
-            margin-bottom: 8px;
+            margin-bottom: 6px;
         }
 
         .card h3 {
             font-size: 14px;
-            color: #a5b4fc;
+            color: #1d4ed8;
             margin-bottom: 4px;
         }
 
         .card p,
         .card li {
             font-size: 13px;
-            color: #d1d5db;
+            color: #374151;
         }
 
         ul {
@@ -179,85 +184,85 @@
         }
 
         .card-image {
-            margin-bottom: 10px;
-            border-radius: 12px;
+            margin-bottom: 8px;
+            border-radius: 10px;
             overflow: hidden;
-            border: 1px solid rgba(148, 163, 184, 0.6);
         }
 
         .card-image img {
             width: 100%;
-            height: 130px;
+            height: 120px;
             object-fit: cover;
         }
 
         .tag-row {
-            margin-top: 10px;
+            margin-top: 8px;
         }
 
         .tag {
             display: inline-flex;
             align-items: center;
             gap: 6px;
-            padding: 4px 10px;
+            padding: 3px 9px;
             border-radius: 999px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
+            border: 1px solid #e5e7eb;
             font-size: 11px;
             margin-right: 6px;
-            margin-top: 6px;
-            background: rgba(15, 23, 42, 0.95);
+            margin-top: 4px;
+            background: #f3f4ff;
+            color: #111827;
         }
 
         .tag-dot {
             width: 6px;
             height: 6px;
             border-radius: 999px;
-            background: #38bdf8;
+            background: #3b82f6;
         }
 
         /* SECTION CV EN BAS */
         .cv-section {
-            margin-top: 24px;
+            margin-top: 14px;
         }
 
         .cv-card {
             display: grid;
             grid-template-columns: minmax(0, 1.2fr) minmax(0, 1.3fr);
-            gap: 18px;
+            gap: 14px;
             align-items: center;
         }
 
         .cv-text p {
             font-size: 13px;
-            color: #d1d5db;
+            color: #374151;
             margin-top: 4px;
         }
 
         .cv-image-wrapper {
-            background: radial-gradient(circle at top, rgba(15, 23, 42, 0.8), rgba(15, 23, 42, 0.98));
-            border-radius: 16px;
-            padding: 8px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
-            box-shadow: 0 0 26px rgba(15, 23, 42, 0.95);
+            background: #ffffff;
+            border-radius: 14px;
+            padding: 6px;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 10px 22px rgba(15, 23, 42, 0.07);
             cursor: pointer;
             transition: transform 0.12s ease, box-shadow 0.12s ease, border-color 0.12s ease;
         }
 
         .cv-image-wrapper img {
             width: 100%;
-            border-radius: 12px;
+            border-radius: 10px;
             object-fit: cover;
         }
 
         .cv-image-wrapper:hover {
             transform: translateY(-2px);
-            box-shadow: 0 0 30px rgba(37, 99, 235, 0.9);
-            border-color: rgba(59, 130, 246, 1);
+            box-shadow: 0 14px 26px rgba(37, 99, 235, 0.18);
+            border-color: #3b82f6;
         }
 
         .cv-hint {
             font-size: 11px;
-            color: #9ca3af;
+            color: #6b7280;
             margin-top: 4px;
         }
 
@@ -265,19 +270,21 @@
         .contact-row {
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
-            margin-top: 10px;
+            gap: 8px;
+            margin-top: 8px;
         }
 
         .contact-pill {
             font-size: 13px;
-            padding: 6px 12px;
+            padding: 6px 11px;
             border-radius: 999px;
-            border: 1px solid rgba(148, 163, 184, 0.7);
-            background: rgba(15, 23, 42, 0.95);
+            border: 1px solid #e5e7eb;
+            background: #ffffff;
             display: inline-flex;
             align-items: center;
             gap: 6px;
+            color: #111827;
+            box-shadow: 0 4px 10px rgba(15, 23, 42, 0.04);
         }
 
         .contact-pill span {
@@ -286,10 +293,10 @@
         }
 
         footer {
-            margin-top: 26px;
+            margin-top: 18px;
             font-size: 11px;
             text-align: center;
-            color: #6b7280;
+            color: #9ca3af;
         }
 
         /* RESPONSIVE */
@@ -308,7 +315,7 @@
                 align-items: flex-start;
             }
             nav {
-                margin-top: 8px;
+                margin-top: 6px;
             }
         }
     </style>
@@ -351,7 +358,6 @@
             </p>
         </div>
         <div class="hero-photo">
-            <!-- Tu peux mettre une photo plus large de toi si tu veux -->
             <img src="matis.jpg" alt="Matis Rodrigues">
         </div>
     </section>
@@ -360,7 +366,6 @@
     <section class="grid-two">
         <section id="etudes" class="card">
             <div class="card-image">
-                <!-- Photo de l’ILEPS -->
                 <img src="ileps.jpg" alt="ILEPS Cergy">
             </div>
             <h2>Parcours académique</h2>
@@ -376,7 +381,6 @@
 
         <section id="travail" class="card">
             <div class="card-image">
-                <!-- Photo des Bains de Seine Mauldre -->
                 <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
             </div>
             <h2>Expériences professionnelles</h2>
@@ -443,7 +447,6 @@
                 </p>
             </div>
             <a href="cv.png" target="_blank" class="cv-image-wrapper">
-                <!-- Image du CV : à exporter en PNG et nommer cv.png -->
                 <img src="cv.png" alt="CV de Matis Rodrigues">
             </a>
         </div>
@@ -465,7 +468,7 @@
             const target = document.querySelector(this.getAttribute('href'));
             if (target) {
                 window.scrollTo({
-                    top: target.offsetTop - 20,
+                    top: target.offsetTop - 16,
                     behavior: 'smooth'
                 });
             }
