Update images and comments in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="nav-inner container">
       <div class="nav-left">
         <div class="nav-avatar">
-          <!-- Mets ici ta petite photo ronde -->
-          <img src="matis-avatar.jpg" alt="Photo de Matis Rodrigues">
+          <!-- Petite photo ronde -->
+          <img src="matis.jpg" alt="Photo de Matis Rodrigues">
         </div>
         <div class="nav-info">
           <h1>Matis Rodrigues</h1>
@@ -51,10 +51,9 @@
             </p>
           </article>
 
-          <!-- Grande photo -->
+          <!-- Grande photo de toi -->
           <article class="card card-photo reveal">
-            <!-- Mets ici ta grande photo verticale -->
-            <img src="matis-portrait.jpg" alt="Matis Rodrigues">
+            <img src="matis.jpg" alt="Portrait de Matis Rodrigues">
           </article>
         </div>
 
@@ -84,7 +83,7 @@
           <!-- Parcours académique -->
           <article class="card card-with-image reveal">
             <div class="card-image">
-              <!-- Photo de l’ILEPS -->
+              <!-- Mets ici ton image ILEPS si tu en as une (nom du fichier à adapter) -->
               <img src="ileps.jpg" alt="ILEPS Cergy">
             </div>
             <div class="card-body">
@@ -103,8 +102,8 @@
           <!-- Expériences professionnelles -->
           <article id="travail" class="card card-with-image reveal">
             <div class="card-image">
-              <!-- Photo des Bains de Seine Mauldre -->
-              <img src="bains.jpg" alt="Les Bains de Seine Mauldre">
+              <!-- Photo de la piscine / Les Bains de Seine Mauldre -->
+              <img src="les-bains.jpg" alt="Les Bains de Seine Mauldre">
             </div>
             <div class="card-body">
               <h3>Expériences professionnelles</h3>
@@ -156,20 +155,19 @@
             en un coup d’œil sur mon CV.
           </p>
           <p>
-            Cliquez sur l’aperçu à droite pour l’ouvrir en grand ou téléchargez-le en PDF.
+            Cliquez sur l’aperçu à droite pour l’ouvrir en grand.
           </p>
 
-          <!-- Mets ici le vrai lien vers ton PDF -->
-          <a href="cv-matis.pdf" target="_blank" class="btn-primary">
-            Ouvrir / télécharger mon CV
+          <!-- Lien vers le CV (même fichier que l’aperçu) -->
+          <a href="cv.png" target="_blank" class="btn-primary">
+            Ouvrir mon CV
           </a>
         </article>
 
-        <!-- Aperçu CV -->
+        <!-- Aperçu visuel du CV -->
         <article class="card card-cv reveal">
-          <!-- Image de ton CV exporté en PNG/JPG -->
-          <a href="cv-matis.pdf" target="_blank" class="cv-preview-link">
-            <img src="cv-matis.jpg" alt="CV de Matis Rodrigues" class="cv-image">
+          <a href="cv.png" target="_blank" class="cv-preview-link">
+            <img src="cv.png" alt="CV de Matis Rodrigues" class="cv-image">
           </a>
         </article>
       </div>
