Enhance content description in index.html
Updated text to provide more detail about the site and its contents.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             <p>
               Passionné par le commerce, le marketing et le milieu du sport / loisirs,
               je construis mon expérience entre formation à l’ILEPS et alternance aux Bains de Seine Mauldre.
-              Ce site présente mon parcours, mes expériences et mes projets.
+            </p>
+            <p>
+              Sur ce site, vous pouvez découvrir plus en détail ma formation et mon alternance,
+              accéder au site des Bains de Seine Mauldre ou à celui de l’ILEPS en cliquant sur les sections dédiées,
+              et, en bas de page, consulter mon CV ainsi que me contacter directement par mail ou via LinkedIn.
             </p>
           </article>
 
@@ -83,7 +87,7 @@
           <!-- Parcours académique -->
           <article class="card card-with-image reveal">
             <div class="card-image">
-              <!-- Mets ici ton image ILEPS si tu en as une (nom du fichier à adapter) -->
+              <!-- Image de l’ILEPS (change le nom de fichier si besoin) -->
               <img src="ileps.jpg" alt="ILEPS Cergy">
             </div>
             <div class="card-body">
@@ -155,7 +159,7 @@
             en un coup d’œil sur mon CV.
           </p>
           <p>
-            Cliquez sur l’aperçu à droite pour l’ouvrir en grand.
+            Cliquez sur l’aperçu à droite pour l’ouvrir en grand ou le télécharger.
           </p>
 
           <!-- Lien vers le CV (même fichier que l’aperçu) -->
