Revise portfolio text and comments for clarity
Updated text for clarity and improved descriptions of sections. Modified comments for better understanding.

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
             <p>
               Passionné par le commerce, le marketing et le milieu du sport / loisirs,
               je construis mon expérience entre formation à l’ILEPS et alternance aux Bains de Seine Mauldre.
+              Ce site présente mon parcours, mes expériences et mes projets.
             </p>
             <p>
-              Sur ce site, vous pouvez découvrir plus en détail ma formation et mon alternance,
-              accéder au site des Bains de Seine Mauldre ou à celui de l’ILEPS en cliquant sur les sections dédiées,
-              et, en bas de page, consulter mon CV ainsi que me contacter directement par mail ou via LinkedIn.
+              En parcourant ce portfolio, vous pouvez découvrir plus en détail ma formation et mon alternance,
+              accéder au site des Bains de Seine Mauldre et à celui de l’ILEPS via les sections
+              <strong>Études</strong> et <strong>Travail</strong>, et, en bas de page, consulter mon CV
+              ainsi que me contacter directement par mail ou via LinkedIn.
             </p>
           </article>
 
-          <!-- Grande photo de toi -->
+          <!-- Grande photo de toi (ronde, gérée par le CSS) -->
           <article class="card card-photo reveal">
             <img src="matis.jpg" alt="Portrait de Matis Rodrigues">
           </article>
@@ -87,7 +89,7 @@
           <!-- Parcours académique -->
           <article class="card card-with-image reveal">
             <div class="card-image">
-              <!-- Image de l’ILEPS (change le nom de fichier si besoin) -->
+              <!-- Image de l’ILEPS -->
               <img src="ileps.jpg" alt="ILEPS Cergy">
             </div>
             <div class="card-body">
